# qtdups

./: CMakeLists.txt
application/: main.cpp
finder/: QtDupsFinder.cpp  QtDupsFinder.h
forms/: dialogwindow.ui  errorswindow.ui  mainwindow.ui
ui/: dialogwindow.h  mainwindow.cpp  mainwindow.h
